--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <meta name="twitter:image" content="https://rizwanrealm.com/og-image.jpg">
 
     <title>Rizwan Realm | AI Automation Architect</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -519,3 +520,4 @@
     </script>
 </body>
 </html>
+
