--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <meta property="og:title" content="Muhammad Rizwan (Rizwan Realm) | AI Entrepreneur">
     <meta property="og:description" content="Stop chasing leads. I architect autonomous revenue systems that qualify buyers 24/7 so you only speak to closed deals.">
     <meta property="og:url" content="https://rizwanrealm.com">
-    <meta property="og:image" content="https://rizwanrealm.com/og-image.jpg">
+    <meta property="og:image" content="https://rizwanrealm.com/profile.jpg">
     <meta property="og:locale" content="en_US">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@rizwanrealm">
     <meta name="twitter:title" content="Muhammad Rizwan | AI Entrepreneur">
     <meta name="twitter:description" content="Focus on revenue, not busy work. Enterprise-Grade Lead Qualification Infrastructure.">
-    <meta name="twitter:image" content="https://rizwanrealm.com/og-image.jpg">
+    <meta name="twitter:image" content="https://rizwanrealm.com/profile.jpg">
 
-    <title>Muhammad Rizwan (Rizwan Realm) | AI Entrepreneur</title>
+    <title>Muhammad Rizwan (Rizwan Realm) | AI Entrepreneur & Automation Architect</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
